--- a/サイレントマジョリティー/夜明けまで強がらなくてもいい.ipynb
+++ b/サイレントマジョリティー/夜明けまで強がらなくてもいい.ipynb
@@ -1377,7 +1377,93 @@
     "4. 统一意识形态：在某些情况下，国家可能推行了一种统一的意识形态，限制了学术研究的多元性和独立性。社会学学者的研究可能与这种意识形态背道而驰，导致他们不受待见。\n",
     "5. 社会控制和保守主义：社会学研究可能引发对现有社会秩序的质疑或挑战，对于维持社会稳定的当局来说，这可能被视为一种威胁。政府或社会保守势力可能会试图限制社会学研究以维护现有的社会控制机制。\n",
     "\n",
-    "需要注意的是，以上只是一些常见的原因，具体情况因国家和时期而异。在民主社会中，学术自由和批判性思维往往得到保护和鼓励，这样的情况下社会学学者通常更容易获得认可和尊重。然而，在权威集中或者受到各种限制的国家，社会学学者可能面临更困难的环境。"
+    "需要注意的是，以上只是一些常见的原因，具体情况因国家和时期而异。在民主社会中，学术自由和批判性思维往往得到保护和鼓励，这样的情况下社会学学者通常更容易获得认可和尊重。然而，在权威集中或者受到各种限制的国家，社会学学者可能面临更困难的环境。\n",
+    "\n",
+    "为什么学者的媒体话语权似乎都不太强势\n",
+    "---\n",
+    "学者在媒体中的话语权可能会受到多个因素的制约，解释如下：\n",
+    "\n",
+    "1. 专业知识传递的挑战：学者通常专注于研究和学术领域，他们的专业领域可能非常狭窄和深入。然而，媒体通常倾向于简化和概括复杂的问题，以适应广大受众。这意味着学者必须将复杂的概念和理论转化为易于理解和吸引人的方式，这对于某些学者可能是一个挑战。\n",
+    "\n",
+    "2. 媒体报道的选择性：媒体对新闻报道有选择性，他们往往更倾向于报道具有争议性、轰动性和吸引眼球的话题。而学者的研究可能更加专业和深入，不太容易用简洁而有趣的方式吸引媒体关注。\n",
+    "\n",
+    "3. 时间和资源限制：媒体报道通常要求迅速准确地传递信息，往往存在时间和篇幅的限制。这使得学者在有限的时间内表达观点和研究成果变得困难。\n",
+    "\n",
+    "4. 媒体选择权的控制：媒体机构有权决定采访和报道哪些学者，他们可能更倾向于与政府、行业或其他利益相关方密切合作的学者，而不是独立的学术界人士。\n",
+    "\n",
+    "尽管学者在媒体中的话语权受到一些制约，但仍然有一些方式可以增强他们的影响力。例如，学者可以积极与媒体合作，提供专业意见和评论，参与公共辩论和政策讨论，建立个人品牌和专家声誉。此外，学者还可以利用社交媒体和其他在线平台来直接与公众分享他们的研究成果和观点。最重要的是，学者需要发展良好的沟通技巧，将复杂的概念转化为通俗易懂的语言，以吸引更广泛的受众。\n",
+    "\n",
+    "为什么有些人没有看过期刊、论文文献，却对一些事物的感觉、看法与期刊、论文作者大体上是相当的，可能没做学者大量调研与考证工作，但意识是趋同的\n",
+    "---\n",
+    "人们对事物的感觉、看法与学术研究的结论趋同，可能因为以下几个原因：\n",
+    "\n",
+    "1. 日常经验和观察：人们通过自己的日常经验和观察，形成了对事物的看法和感受。这些经验和观察可能与学术研究的结论相符合，因为许多学术研究是基于实证数据和观察结果得出的。\n",
+    "\n",
+    "2. 社会化影响：社会化过程中，人们受到家庭、朋友、同事、媒体等多种渠道的影响。这些影响可以塑造个人的价值观、信念和看法，并使其与学术研究的结论相一致。\n",
+    "\n",
+    "3. 公共信息来源：人们通过各种公共信息来源（如新闻报道、电视节目、网络信息等）了解世界上发生的事情。虽然这些信息未必是经过严格的学术研究和考证，但它们可能反映了社会的普遍观点和共识，从而与学术研究的结论趋同。\n",
+    "\n",
+    "4. 大众文化影响：大众文化对人们的思维方式、价值观和看法有很大影响。一些文化产品（如电影、音乐、文学作品等）可能传递了一种特定的视角和观点，使人们对事物形成共同的看法。\n",
+    "\n",
+    "需要注意的是，个人的感觉和观点与学术研究的结论趋同，并不意味着个人的观点就一定正确或准确。学术研究通常通过严格的方法和数据分析来验证和支持结论，具有更高的可信度和科学性。因此，在评估问题和形成观点时，还是要倾听专业学者的观点并参考科学研究的结论。"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "一些社会就业、贫富不均、民生保障不到位、执法偏差、言论限制等现象影响，都会影响一个人对国家的整体看法\n",
+    "---\n",
+    "是的，您所提到的一些社会现象确实会影响一个人对国家的整体看法。下面是一些解释：\n",
+    "\n",
+    "社会就业：就业机会的不平等和就业难度加大可能导致人们对国家的经济状况和发展前景感到担忧或不满。如果一个国家的就业市场不健康，许多人难以找到稳定的、体面的工作，这会对他们对国家整体状况的评估产生负面影响。\n",
+    "\n",
+    "贫富不均：当贫富差距过大时，普通民众可能会感到不公平和不满。如果一个国家的财富分配不公正，富裕阶层日益富有而底层人民生活水平没有明显改善，这可能会导致对国家整体治理能力和社会公平性的质疑。\n",
+    "\n",
+    "民生保障不到位：民众对于基本的生活保障、医疗、教育等方面的需求得不到满足时，会对国家的执政能力和政策效果产生质疑。如果一个国家未能提供足够的社会福利和公共服务，人们可能会对国家整体的发展和民生状况失去信心。\n",
+    "\n",
+    "执法偏差：不公正的司法系统和执法偏差可能会使人们对国家的治理能力和法制建设产生质疑。当法律被滥用、权力被滥用、腐败现象严重时，人们可能会怀疑国家的公正性和透明度，从而对国家整体的信任度下降。\n",
+    "\n",
+    "言论限制：言论自由是公民表达意见和参与公共事务的基本权利。当言论受到过度限制或审查时，人们可能会感到对国家整体政治环境的不满和对民主价值的质疑。言论限制可能导致信息不对称和媒体环境的单一化，限制人们获取多元观点和实事求是的信息来源。\n",
+    "\n",
+    "这些因素可能影响一个人对国家整体的看法和对国家治理的评估，因为它们直接关系到人们的生活质量、公平感和个人权益。然而，每个人的看法都是主观的，并且还受到其他因素的影响，如教育背景、思想倾向和个人经历等。\n",
+    "\n",
+    "一些社会就业、贫富不均、民生保障不到位、执法偏差、言论限制等现象影响，都会影响一个人对国家的整体看法，对大一统等其他宣传口号都相对不怎么在意，无所谓\n",
+    "---\n",
+    "理解您对于一些宣传口号相对不怎么在意的态度。每个人对于国家和政府所提出的口号和宣传信息的关注程度是有差异的，这种差异可以受到多种因素的影响。对于一些人来说，他们更关心实际的社会问题和现实的生活状况，比如就业、贫富差距、民生保障等。他们可能会更加关注国家在解决这些问题上的实际行动和政策成效，而不仅仅是口号宣传。\n",
+    "\n",
+    "此外，一些人可能对于大一统等宣传口号持怀疑态度，因为他们可能认为这些口号过于笼统或缺乏具体的内容和实施细节。他们更愿意看到实际的政策举措和改革措施，以解决实际存在的问题和挑战。\n",
+    "\n",
+    "重要的是要记住，人们对国家整体的看法是复杂多样的，受到个人经历、观念、教育和价值观等多种因素的影响。不同的人会关注和重视不同的问题，并根据自己的判断和价值观来评估国家的整体状况。作为一个公民，保持开放的思维、了解多种观点和持续的思考是很重要的，这有助于形成更全面和准确的对国家的评估。\n",
+    "\n",
+    "一些社会就业、贫富不均、民生保障不到位、执法偏差、言论限制等现象影响，都会影响一个人对国家的整体看法。可学生似乎很少有这方面忧虑啊\n",
+    "---\n",
+    "您提到的现象可能会对人们对国家整体的看法产生影响，但学生可能相对较少表达这方面的忧虑主要有以下几个原因：\n",
+    "\n",
+    "优先关注学业：学生通常在学业上花费较多时间和精力，这是他们当前的主要任务。他们更关注学习成绩、升学就业等与教育相关的问题，而对社会就业和贫富不均等社会问题的关注相对较低。\n",
+    "\n",
+    "对现实问题认知有限：年轻的学生可能对一些社会问题的认知有限，尤其是那些直接关系到他们的生活现状的问题。他们可能没有接触到社会就业竞争的压力、贫困地区的生活状况、法律执法的具体问题等，所以对这些问题的关注度相对较低。\n",
+    "\n",
+    "缺乏经验和参与感：学生通常缺乏实际生活和社会经验，他们的参与感可能较低。一些社会问题需要深入了解和亲身经历才能深刻体会，因此学生可能还没有意识到这些问题的重要性和影响。\n",
+    "\n",
+    "然而，这并不意味着学生对这些问题完全漠不关心。随着学生的成长和社会经验的积累，他们往往开始关注更广泛的社会问题，并对国家的整体状况产生更深入的思考和评估。此外，教育和社会环境对学生的意识觉醒和社会责任感的培养也起到重要作用。\n",
+    "\n",
+    "如何增强参与感做到格物致知呢？\n",
+    "---\n",
+    "要增强参与感并做到格物致知，您可以考虑以下几点：\n",
+    "\n",
+    "开阔视野：积极主动地获取各种信息，包括新闻、书籍、文章、学术研究等。通过多角度、多渠道的信息获取，可以丰富自己的知识储备，并拓宽对社会问题的认知。保持对不同领域和观点的开放态度，能够更好地了解事实真相。\n",
+    "\n",
+    "反思与讨论：反思是关注自身行为和观点的重要方式。在日常生活中，不断反思自己的言行举止，审视自己的价值观和行为准则是否与自己所期望的一致。此外，积极参与讨论和交流，与他人分享观点和经验，倾听不同声音，也是培养格物致知的重要途径。\n",
+    "\n",
+    "实践社会参与：积极参与社会活动和公益事业，亲身体验社会问题和挑战。可以加入志愿者组织，参与社区服务、环境保护、教育支持等活动，通过实践来了解社会问题的本质，并为解决问题贡献自己的力量。\n",
+    "\n",
+    "学习批判性思维：发展批判性思维能力，善于思考问题的本质、原因和解决方法。不盲从、不轻信，学会分析和评估信息的可靠性和偏见，形成独立的判断和观点。\n",
+    "\n",
+    "深入了解相关领域知识：如果想对某个特定领域有更深入的理解，可以选择进一步学习相关专业课程或参加相关讲座和研讨会。通过专业知识的学习，可以更全面地了解相关问题，并提供更具体的解决方案。\n",
+    "\n",
+    "总之，增强参与感并做到格物致知需要积极学习、实践和反思。通过不断积累知识、参与社会活动和交流讨论，您可以逐渐提升对社会问题的理解和思考能力，以更主动和全面的态度参与到社会中去。"
    ]
   }
  ],
