--- a/サイレントマジョリティー/大多数.md
+++ b/サイレントマジョリティー/大多数.md
@@ -17,3 +17,26 @@
 
 ---
 
+我有一个同事，经常夸耀大手大脚的人有钱，同事的工资也是处于上游，月入过万，同时低调存钱、也买了车和房，但他基本上很少谈及这些，喜欢浮夸大手大脚吃喝的别人，这个人究竟有些什么心思呢？
+
+这个同事的行为可能涉及到一些心理和社交动机。以下是一些可能的解释：
+
+1. 保持低调和谦逊： 有些人即使有很多财富，也喜欢保持低调，不炫耀自己的财富。这可能是一种对财富的谦逊态度，不愿意将个人财务状况当成与他人竞争或炫耀的资本。
+2. 寻求认同感： 有些人可能通过夸耀别人的大手大脚生活方式来获得他人的认同感。这可能是一种试图在社交圈中取得尊重和认可的方式，而不是通过炫耀自己的财富。
+3. 享受生活的同时保持财务稳健： 尽管他的生活方式可能给人一种“大手大脚”的印象，但实际上他可能是个理智的财务管理者。购买车和房屋可能是为了满足个人生活需求，而并非为了炫耀。
+4. 对比心理： 他可能认为自己的财务状况相对较好，但并不希望在工作环境中引起不必要的注意或嫉妒。因此，他选择强调其他人的“大手大脚”生活，以避免职场不适。
+5. 社交策略： 有些人喜欢通过与他人建立更加轻松和愉快的社交关系，而不是强调财务差异。这可能是为了避免可能引起的紧张和不适。
+
+总的来说，这个同事可能有自己独特的社交和心理动机，而不是简单地追求炫耀财富。如果你对他的行为感到好奇，或者觉得他的行为在工作环境中产生了一些问题，可能最好的方式是与他直接交流，了解他的观点和动机。
+
+---
+
+我还有个同事喜欢当面浮夸别人，但实际他内心即看不起又不喜欢那个被浮夸的那个人
+
+1. 欲取悦他人： 这个同事可能试图通过夸奖他人来取悦团队成员或上级，以期望得到更多的认可或好感。
+2. 不善于表达真实感受： 有些人可能因为不擅长表达负面情感，选择在外表上呈现出一种友好和积极的形象，而将真实感受内化。
+3. 社交压力： 在工作环境中，有时人们可能感受到社交压力，因为他们认为夸奖他人是一种社交礼仪，而不太愿意表达真实的看法。
+4. 竞争意识： 有可能这个同事在心里感受到与别人的竞争，通过夸奖表面上显示出的优点，同时在内心中保留对他人的轻视。
+5. 求自我满足感： 这个同事可能通过夸奖他人来获得自己的满足感，同时也可能从这种行为中得到一些快感或优越感。然而，内心的看不起可能反映了他自己的不安全感或自卑感。
+6. 社交策略： 有些人在社交场合中可能选择表现出一种友好和欣赏的外表，以维持良好的关系或避免冲突。然而，在内心深处可能存在一种与外表不符的真实看法。
+7. 自我保护机制： 通过浮夸别人，他可能试图在他人面前建立一个友好、积极的形象。然而，对被浮夸的人内心的轻视可能是他的一种自我保护机制，以确保自己在社交场合中不受伤害。
