--- a/软件分享及网页备份/wps2016.md
+++ b/软件分享及网页备份/wps2016.md
@@ -1,19 +1,10 @@
 
-[大祥区党政门户网-办事大厅](http://info.dxzc.gov.cn/Item/21126.aspx)
+* [大祥区党政门户网-办事大厅](http://info.dxzc.gov.cn/Item/21126.aspx)
+* [大庆职业技术学院-关于WPS Office安装率考核工作的通知](https://www.dqzyxy.net/xdjy/info/9377/58678.htm)
+* [广东省政务服务数据管理局-下载粤政易](https://yzy.gdzwfw.gov.cn/download.html)
+* [大庆市人民政府-金山办公软件安装包下载](https://www.daqing.gov.cn/daqing/xgxz/202006/c05_87790.shtml)
 
-![](https://s2.xptou.com/2023/04/04/642bd00fc01d0.png)
 
-[大庆职业技术学院-关于WPS Office安装率考核工作的通知](https://www.dqzyxy.net/xdjy/info/9377/58678.htm)
-
-![](https://s2.xptou.com/2023/04/04/642bd03ee33c5.png)
-
-[广东省政务服务数据管理局-下载粤政易](https://yzy.gdzwfw.gov.cn/download.html)
-
-![](https://s2.xptou.com/2023/04/04/642bd0987027d.png)
-
-[大庆市人民政府-金山办公软件安装包下载](https://www.daqing.gov.cn/daqing/xgxz/202006/c05_87790.shtml)
-
-![](https://s2.xptou.com/2023/04/04/642bd0f6c2b18.png)
 
 第三方来源：[wps2016pro版带vbs](https://www.52pojie.cn/thread-1073535-1-1.html) 、[WPS2016（不足50M）U盘版](https://www.52pojie.cn/thread-1606129-1-1.html)。PS，WPS会记住这些批量测试的序列号，卸载并删掉`"C:\ProgramData\kingsoft\office6\license2.dat"`的文件夹，再安装就行了。
 
