--- a/软件分享及网页备份/个人电脑软件备忘录.md
+++ b/软件分享及网页备份/个人电脑软件备忘录.md
@@ -1,5 +1,57 @@
-### 目的：重装系统后方便查找
+## 目的：重装系统后方便查找
 
 ### Windows
+
+#### 安全/清理
+
+等同Windows系统的homebrew
+
+* https://scoop.sh
+
+虽收费，但不贵，永久，体验不错（目前，已替代360）
+
+* wisecleaner365
+
+#### 常规办公软件
+
+由于xmind对长图放大支持太差（目前，已替代Xmind）
+
+* https://github.com/wanglin2/mind-map
+
+#### 辅助工具
+
+
+精简快捷方式（最后装）
+
+* winlanuch
+
+搜索
+
+* FlowLauncher （功能等同mac两款知名搜索工具）
+* everything
+* Anytxt Searcher （文本内容）
+
+看图/预览
+
+* image eyes
+* quicklook
+
+截图
+
+* PixPin
+* fs capture
+
+外语工具
+
+* pot （划词翻译）
+* iword
+
+
+连接中国到台湾
+
+* Clash
+
+#### 系统快捷设置工具（可选，适合桌面）
+
 
 ### mac
