--- a/软件分享及网页备份/个人电脑软件备忘录.md
+++ b/软件分享及网页备份/个人电脑软件备忘录.md
@@ -2,24 +2,62 @@
 
 ### Windows
 
-#### 安全/清理
+等同Windows系统的homebrew：https://scoop.sh
 
-等同Windows系统的homebrew
-
-* https://scoop.sh
+#### 安全/清理/驱动安装
 
 虽收费，但不贵，永久，体验不错（目前，已替代360）
 
 * wisecleaner365
 
+目前，已替代鲁大师、总裁驱动、驱动精灵等
+
+* 硬件狗狗
+
 #### 常规办公软件
+
+office LTSC
+
+PDF，免费、好看、还能编辑
+
+* PDFgear
 
 由于xmind对长图放大支持太差（目前，已替代Xmind）
 
 * https://github.com/wanglin2/mind-map
 
+#### 影音/下载
+
+影音
+
+* potplayer
+* apple music
+
+下载
+
+* IDM
+* VidJuice UniTube
+* 迅雷
+
+#### 文本编辑
+
+* notepad++
+* vs code
+* Typora
+
 #### 辅助工具
 
+桌面置物仓 
+
+* Fences
+
+桌面临时文件整理
+
+* DropIt
+
+程序窗口管理
+
+* Groupy
 
 精简快捷方式（最后装）
 
@@ -46,10 +84,17 @@
 * pot （划词翻译）
 * iword
 
+时长统计
+
+* Tai!
 
 连接中国到台湾
 
 * Clash
+
+壁纸软件
+
+* WallpaperEngine
 
 #### 系统快捷设置工具（可选，适合桌面）
 
