--- a/软件分享及网页备份/个人电脑软件备忘录.md
+++ b/软件分享及网页备份/个人电脑软件备忘录.md
@@ -1,5 +1,11 @@
 ## 目的：重装系统后方便查找
 
+TOC
+
+* [Windows]()
+* [Mac]()
+* [浏览器扩展]()
+
 ### Windows
 
 等同Windows系统的homebrew：https://scoop.sh
@@ -101,3 +107,7 @@ PDF，免费、好看、还能编辑
 #### 其他兴趣项目（知道，但没使用过）
 
 ### mac
+
+### 浏览器扩展
+
+
