--- a/软件分享及网页备份/个人电脑软件备忘录.md
+++ b/软件分享及网页备份/个人电脑软件备忘录.md
@@ -2,8 +2,8 @@
 
 TOC
 
-* [Windows]()
-* [Mac]()
+* [Windows](https://github.com/hoochanlon/hamulete/blob/master/%E8%BD%AF%E4%BB%B6%E5%88%86%E4%BA%AB%E5%8F%8A%E7%BD%91%E9%A1%B5%E5%A4%87%E4%BB%BD/%E4%B8%AA%E4%BA%BA%E7%94%B5%E8%84%91%E8%BD%AF%E4%BB%B6%E5%A4%87%E5%BF%98%E5%BD%95.md#windows)
+* [Mac](https://github.com/hoochanlon/hamulete/blob/master/%E8%BD%AF%E4%BB%B6%E5%88%86%E4%BA%AB%E5%8F%8A%E7%BD%91%E9%A1%B5%E5%A4%87%E4%BB%BD/%E4%B8%AA%E4%BA%BA%E7%94%B5%E8%84%91%E8%BD%AF%E4%BB%B6%E5%A4%87%E5%BF%98%E5%BD%95.md#Mac)
 * [浏览器扩展]()
 
 ### Windows
@@ -106,7 +106,7 @@ PDF，免费、好看、还能编辑
 
 #### 其他兴趣项目（知道，但没使用过）
 
-### mac
+### Mac
 
 ### 浏览器扩展
 
