--- a/软件分享及网页备份/个人电脑软件备忘录.md
+++ b/软件分享及网页备份/个人电脑软件备忘录.md
@@ -4,7 +4,7 @@ TOC
 
 * [Windows](https://github.com/hoochanlon/hamulete/blob/master/%E8%BD%AF%E4%BB%B6%E5%88%86%E4%BA%AB%E5%8F%8A%E7%BD%91%E9%A1%B5%E5%A4%87%E4%BB%BD/%E4%B8%AA%E4%BA%BA%E7%94%B5%E8%84%91%E8%BD%AF%E4%BB%B6%E5%A4%87%E5%BF%98%E5%BD%95.md#windows)
 * [Mac](https://github.com/hoochanlon/hamulete/blob/master/%E8%BD%AF%E4%BB%B6%E5%88%86%E4%BA%AB%E5%8F%8A%E7%BD%91%E9%A1%B5%E5%A4%87%E4%BB%BD/%E4%B8%AA%E4%BA%BA%E7%94%B5%E8%84%91%E8%BD%AF%E4%BB%B6%E5%A4%87%E5%BF%98%E5%BD%95.md#Mac)
-* [浏览器扩展]()
+* [浏览器扩展](https://github.com/hoochanlon/hamulete/blob/master/%E8%BD%AF%E4%BB%B6%E5%88%86%E4%BA%AB%E5%8F%8A%E7%BD%91%E9%A1%B5%E5%A4%87%E4%BB%BD/%E4%B8%AA%E4%BA%BA%E7%94%B5%E8%84%91%E8%BD%AF%E4%BB%B6%E5%A4%87%E5%BF%98%E5%BD%95.md#%E6%B5%8F%E8%A7%88%E5%99%A8%E6%89%A9%E5%B1%95)
 
 ### Windows
 
