--- a/软件分享及网页备份/个人电脑软件备忘录.md
+++ b/软件分享及网页备份/个人电脑软件备忘录.md
@@ -104,10 +104,14 @@ PDF，免费、好看、还能编辑
 
 #### 系统快捷设置工具
 
-#### 其他兴趣项目（知道，但没使用过）
-
 ### Mac
 
 ### 浏览器扩展
+
+### 以前使用过的软件
+
+这些软件是如今没场景需求，由于信息普及，或是使用大众化的常规同类型软件一样能成事，感觉有点儿“有它没它都行”，所以如今基本没使用了。
+
+### 其他兴趣项目（知道，但没使用过）
 
 
