--- a/软件分享及网页备份/个人电脑软件备忘录.md
+++ b/软件分享及网页备份/个人电脑软件备忘录.md
@@ -110,7 +110,11 @@ PDF，免费、好看、还能编辑
 
 ### 以前使用过的软件
 
-这些软件是如今没场景需求，由于信息普及，或是使用大众化的常规同类型软件一样能成事，感觉有点儿“有它没它都行”，所以如今基本没使用了。
+这些软件是如今没场景需求，由于信息普及、应用场景的变更，或是使用大众化的常规同类型软件一样能成事，感觉有点儿“有它没它都行”，所以如今基本没使用了。
+
+举个例子来说，学生时期使用的软件，不一定在社会上就好用，为了卖家创造的需求场景而套在自己身上购买使用，甚至是浪费钱。软件：margin note，电子设备：ipad。
+
+
 
 ### 其他兴趣项目（知道，但没使用过）
 
