--- a/软件分享及网页备份/个人电脑软件备忘录.md
+++ b/软件分享及网页备份/个人电脑软件备忘录.md
@@ -5,6 +5,8 @@
 * [Windows](https://github.com/hoochanlon/hamulete/blob/master/%E8%BD%AF%E4%BB%B6%E5%88%86%E4%BA%AB%E5%8F%8A%E7%BD%91%E9%A1%B5%E5%A4%87%E4%BB%BD/%E4%B8%AA%E4%BA%BA%E7%94%B5%E8%84%91%E8%BD%AF%E4%BB%B6%E5%A4%87%E5%BF%98%E5%BD%95.md#windows)
 * [Mac](https://github.com/hoochanlon/hamulete/blob/master/%E8%BD%AF%E4%BB%B6%E5%88%86%E4%BA%AB%E5%8F%8A%E7%BD%91%E9%A1%B5%E5%A4%87%E4%BB%BD/%E4%B8%AA%E4%BA%BA%E7%94%B5%E8%84%91%E8%BD%AF%E4%BB%B6%E5%A4%87%E5%BF%98%E5%BD%95.md#Mac)
 * [浏览器扩展](https://github.com/hoochanlon/hamulete/blob/master/%E8%BD%AF%E4%BB%B6%E5%88%86%E4%BA%AB%E5%8F%8A%E7%BD%91%E9%A1%B5%E5%A4%87%E4%BB%BD/%E4%B8%AA%E4%BA%BA%E7%94%B5%E8%84%91%E8%BD%AF%E4%BB%B6%E5%A4%87%E5%BF%98%E5%BD%95.md#%E6%B5%8F%E8%A7%88%E5%99%A8%E6%89%A9%E5%B1%95)
+* [以前使用过的软件](https://github.com/hoochanlon/hamulete/blob/master/%E8%BD%AF%E4%BB%B6%E5%88%86%E4%BA%AB%E5%8F%8A%E7%BD%91%E9%A1%B5%E5%A4%87%E4%BB%BD/%E4%B8%AA%E4%BA%BA%E7%94%B5%E8%84%91%E8%BD%AF%E4%BB%B6%E5%A4%87%E5%BF%98%E5%BD%95.md#%E4%BB%A5%E5%89%8D%E4%BD%BF%E7%94%A8%E8%BF%87%E7%9A%84%E8%BD%AF%E4%BB%B6)
+* []()
 
 ### Windows
 
@@ -113,7 +115,6 @@ PDF，免费、好看、还能编辑
 这些软件是如今没场景需求，由于信息普及、应用场景的变更，或是使用大众化的常规同类型软件一样能成事，感觉有点儿“有它没它都行”，所以如今基本没使用了。
 
 举个例子来说，学生时期使用的软件，不一定在社会上就好用，为了卖家创造的需求场景而套在自己身上购买使用，甚至是浪费钱。软件：margin note，电子设备：ipad。
-
 
 
 ### 其他兴趣项目（知道，但没使用过）
