--- a/软件分享及网页备份/个人电脑软件备忘录.md
+++ b/软件分享及网页备份/个人电脑软件备忘录.md
@@ -6,7 +6,7 @@
 * [Mac](https://github.com/hoochanlon/hamulete/blob/master/%E8%BD%AF%E4%BB%B6%E5%88%86%E4%BA%AB%E5%8F%8A%E7%BD%91%E9%A1%B5%E5%A4%87%E4%BB%BD/%E4%B8%AA%E4%BA%BA%E7%94%B5%E8%84%91%E8%BD%AF%E4%BB%B6%E5%A4%87%E5%BF%98%E5%BD%95.md#Mac)
 * [浏览器扩展](https://github.com/hoochanlon/hamulete/blob/master/%E8%BD%AF%E4%BB%B6%E5%88%86%E4%BA%AB%E5%8F%8A%E7%BD%91%E9%A1%B5%E5%A4%87%E4%BB%BD/%E4%B8%AA%E4%BA%BA%E7%94%B5%E8%84%91%E8%BD%AF%E4%BB%B6%E5%A4%87%E5%BF%98%E5%BD%95.md#%E6%B5%8F%E8%A7%88%E5%99%A8%E6%89%A9%E5%B1%95)
 * [以前使用过的软件](https://github.com/hoochanlon/hamulete/blob/master/%E8%BD%AF%E4%BB%B6%E5%88%86%E4%BA%AB%E5%8F%8A%E7%BD%91%E9%A1%B5%E5%A4%87%E4%BB%BD/%E4%B8%AA%E4%BA%BA%E7%94%B5%E8%84%91%E8%BD%AF%E4%BB%B6%E5%A4%87%E5%BF%98%E5%BD%95.md#%E4%BB%A5%E5%89%8D%E4%BD%BF%E7%94%A8%E8%BF%87%E7%9A%84%E8%BD%AF%E4%BB%B6)
-* []()
+* [其他兴趣项目（知道，但没使用过）](https://github.com/hoochanlon/hamulete/blob/master/%E8%BD%AF%E4%BB%B6%E5%88%86%E4%BA%AB%E5%8F%8A%E7%BD%91%E9%A1%B5%E5%A4%87%E4%BB%BD/%E4%B8%AA%E4%BA%BA%E7%94%B5%E8%84%91%E8%BD%AF%E4%BB%B6%E5%A4%87%E5%BF%98%E5%BD%95.md#%E5%85%B6%E4%BB%96%E5%85%B4%E8%B6%A3%E9%A1%B9%E7%9B%AE%E7%9F%A5%E9%81%93%E4%BD%86%E6%B2%A1%E4%BD%BF%E7%94%A8%E8%BF%87)
 
 ### Windows
 
