--- a/软件分享及网页备份/建站过程.MD
+++ b/软件分享及网页备份/建站过程.MD
@@ -36,7 +36,7 @@
 
 ### うんめいのわをまわせ
 
-> [!DANGER]
+> [!WARNING]
 > 万里汇注册的人太多，看起来近乎于封锁了。野卡被立案了，虚拟卡上手门槛和开visa难度差不多了，而且风险也高了...不推荐
 > 
 > 以前是万能的淘宝，现在是暗号的咸鱼...信息知道的人太多也收得越来越紧。我记得几年前，注册Google、chatgpt个人账号都是淘宝商家购买服务的。
