--- a/软件分享及网页备份/建站过程.MD
+++ b/软件分享及网页备份/建站过程.MD
@@ -41,5 +41,5 @@
 > 以前是万能的淘宝，现在是暗号的咸鱼...信息知道的人太多也收得越来越紧。我记得几年前，注册Google、chatgpt个人账号都是淘宝商家购买服务的。
 > 现在政策收紧了，几乎不太那么容易了。
 
-* [【科普分享】中国银行的MasterCard/VISA借记卡如何申请](https://linux.do/t/topic/241809?page=3) 
+* [linux.do - 【科普分享】中国银行的MasterCard/VISA借记卡如何申请](https://linux.do/t/topic/241809?page=3) 
 * [注册美区apple id让我又一次体验了刷机般的过程](https://blog.hoochanlon.space/posts/16819.html)
