--- a/软件分享及网页备份/建站过程.MD
+++ b/软件分享及网页备份/建站过程.MD
@@ -34,7 +34,7 @@
 * https://wuyong.fun
 
 
-### うんめいのわをまわせ
+### 運命のルーレット廻して
 
 > [!WARNING]
 > 万里汇注册的人太多，看起来近乎于封锁了。野卡被立案了，虚拟卡上手门槛和开visa难度差不多了，而且风险也高了...不推荐。
