--- a/软件分享及网页备份/建站过程.MD
+++ b/软件分享及网页备份/建站过程.MD
@@ -34,11 +34,11 @@
 * https://wuyong.fun
 
 
-### 運命のルーレット廻して
+### 息もできない·運命のルーレット廻して
 
 > [!WARNING]
 > 万里汇注册的人太多，看起来近乎于封锁了。野卡被立案了，虚拟卡上手门槛和开visa难度差不多了，而且风险也高了...不推荐。
-> 以前是万能的淘宝，现在是暗号的咸鱼...信息知道的人太多也收得越来越紧。我记得几年前，注册Google、chatgpt个人账号都是淘宝商家购买服务的。
+> 以前是万能的淘宝，现在是暗号的咸鱼...信息知道的人太多也收得越来越紧。我记得几年前，自己的chatgpt账号都是淘宝商家购买服务的。
 > 现在政策收紧了，几乎不太那么容易了。
 
 * [linux.do - 【科普分享】中国银行的MasterCard/VISA借记卡如何申请](https://linux.do/t/topic/241809?page=3) 
