--- a/软件分享及网页备份/建站过程.md
+++ b/软件分享及网页备份/建站过程.md
@@ -1,11 +1,16 @@
+<img align="right" src="https://i.ooxx.ooo/i/ZTQ0Z.png" style="width: auto; height: 200px;">
+
 > [!NOTE]
 > 2025年底才来更新这些信息，看起来有些也有些过时了。  
 >
-> 绝大多数免费云主机、域名基本上都是商家推售套路，上手门槛高且失效也快，还不如自己先花个几十百来块，买个腾讯云、阿里云上手体验一两个月。
+> 绝大多数免费云主机、域名基本上都是商家推售套路，上手门槛高且失效也快
+>
+> 还不如自己先花个几十百来块，买个腾讯云、阿里云上手体验一两个月。
 >
 > 个人购买域名及建站笔记：[搭建网站多次失败后的成功记录](https://blog.hoochanlon.space/posts/11354.html)  
 >
 > 也不知道这些下面的薅羊毛多久会失效，就仅供参考吧
+
 
 ### 信息收集
 
