--- a/软件分享及网页备份/建站过程.md
+++ b/软件分享及网页备份/建站过程.md
@@ -8,11 +8,11 @@
 > 还不如自己先花个几十百来块，买个腾讯云、阿里云上手体验一两个月。
 >
 > 个人购买域名及建站笔记：[搭建网站多次失败后的成功记录](https://blog.hoochanlon.space/posts/11354.html)  
->
-> 也不知道这些下面的薅羊毛多久会失效，就仅供参考吧
 
 
 ### 信息收集
+
+> 也不知道这些薅羊毛多久会失效，就仅供参考吧
 
 自建导航站：
 
