--- a/软件分享及网页备份/建站过程.md
+++ b/软件分享及网页备份/建站过程.md
@@ -7,7 +7,9 @@
 >
 > 还不如自己先花个几十百来块，买个腾讯云、阿里云上手体验一两个月。
 >
-> 个人购买域名及建站笔记：[搭建网站多次失败后的成功记录](https://blog.hoochanlon.space/posts/11354.html)  
+> 个人购买域名及建站笔记：
+> * [搭建网站多次失败后的成功记录](https://blog.hoochanlon.space/posts/11354.html)
+> * [开通虚拟信用卡摸索历程](https://blog.hoochanlon.space/posts/20251113124834.html)
 
 
 ### 信息收集
